Changes to original